trunk/Archive2/60/54714c7dc0ea68/output
main.cpp:13:19: error: 'title' was not declared in this scope
     title("Coliru"),
                   ^
main.cpp:15:58: error: 'input' was not declared in this scope
         tagged(code_field{}, stretch(input("int main(){}"))),
                                                          ^
main.cpp:15:59: error: 'stretch' was not declared in this scope
         tagged(code_field{}, stretch(input("int main(){}"))),
                                                           ^
main.cpp:15:60: error: 'tagged' was not declared in this scope
         tagged(code_field{}, stretch(input("int main(){}"))),
                                                            ^
main.cpp:17:66: error: 'input' was not declared in this scope
             tagged(command_field{},  stretch(input("g++ main.cpp"))),
                                                                  ^
main.cpp:17:67: error: 'stretch' was not declared in this scope
             tagged(command_field{},  stretch(input("g++ main.cpp"))),
                                                                   ^
main.cpp:17:68: error: 'tagged' was not declared in this scope
             tagged(command_field{},  stretch(input("g++ main.cpp"))),
                                                                    ^
main.cpp:18:75: error: 'button' was not declared in this scope
             tagged(compile_button{}, button("compile_button, link and run")),
                                                                           ^
main.cpp:18:76: error: 'tagged' was not declared in this scope
             tagged(compile_button{}, button("compile_button, link and run")),
                                                                            ^
main.cpp:19:60: error: 'button' was not declared in this scope
             tagged(share_button{},   button("share_button!")))
                                                            ^
main.cpp:19:61: error: 'tagged' was not declared in this scope
             tagged(share_button{},   button("share_button!")))
                                                             ^
main.cpp:19:62: error: 'hbox' was not declared in this scope
             tagged(share_button{},   button("share_button!")))
                                                              ^
main.cpp:20:5: error: 'vbox' was not declared in this scope
     ))
     ^
main.cpp:20:6: error: 'stretch' was not declared in this scope
     ))
      ^
main.cpp:21:1: error: 'dialog' was not declared in this scope
 );
 ^
main.cpp:25:1: error: 'get' does not name a type
 get<compile_button>(coliru) += [] {
 ^
main.cpp:29:2: warning: extra ';' [-Wpedantic]
 };
  ^
main.cpp:31:1: error: 'get' does not name a type
 get<share_button>(coliru) += []{
 ^
main.cpp:35:2: warning: extra ';' [-Wpedantic]
 };
  ^
